Revert "Implement methods" for PR This reverts commit d751a824